feat: remove most .join() calls in IncidentUpdateTask
# Conflicts:
#	zeebe/exporters/camunda-exporter/src/main/java/io/camunda/exporter/tasks/incident/IncidentUpdateTask.java